crates/icarus-derive/tests/ui/fail/icarus_type_bounded.stderr
error[E0046]: not all trait items implemented, missing: `into_bytes`
 --> tests/ui/fail/icarus_type_bounded.rs:5:10
  |
5 | #[derive(IcarusType, Debug, Clone, Serialize, Deserialize, CandidType)]
  |          ^^^^^^^^^^ missing `into_bytes` in implementation
  |
  = note: this error originates in the derive macro `IcarusType` (in Nightly builds, run with -Z macro-backtrace for more info)
